--- a/Analisis.ipynb
+++ b/Analisis.ipynb
@@ -1418,7 +1418,7 @@
     "    - Ver los comportamientos de las variables en los momentos de No Failure.\n",
     "    - Los problemas de Falla de Energia, impacta sobre la velocidad de rotación y el torque alejandose de la mediana.\n",
     "    - Las Fallas de sobre-esfuerzo se producen con valores de torque altos y gran cantidad de minutos de uso de la herramienta.\n",
-    "    - \n",
+    "    - La falta de disipacion de temperatura se presenta a bajas velocidades de rotación y altas temperaturas, mostrando el la problematica.\n",
     "\"\"\"\n",
     "for var_name in variables_numericas:\n",
     "    if var_name == \"Target\":\n",
