--- a/analisis_mono_bi_variado.ipynb
+++ b/analisis_mono_bi_variado.ipynb
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -758,27 +758,21 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nEn el grafico se puede ver un gran desbalance entre los registros sin fallas y los que representan fallas. \\nse procedera a ignorar los registros de No Failure(Outlier).\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Recuento de la variable Target_2\n",
     "draw = sns.catplot(x=\"Target\", hue=\"Failure_Type\", data=df, kind=\"count\")\n",
     "draw.set_xticklabels(rotation=45, ha=\"right\")\n",
-    "plt.show()\n",
-    "\"\"\"\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "En el grafico se puede ver un gran desbalance entre los registros sin fallas y los que representan fallas. \n",
-    "se procedera a ignorar los registros de No Failure(Outlier).\n",
-    "\"\"\""
+    "se procedera a ignorar los registros de No Failure(Outlier)."
    ]
   },
   {
@@ -832,8 +826,14 @@
    "source": [
     "# Graficamos un conteo de roturas \n",
     "grafico= sns.countplot(fallas[\"Failure_Type\"])\n",
-    "grafico.set_xticklabels(grafico.get_xticklabels(), rotation=45, ha=\"right\")\n",
-    "\"\"\"Este grafico muestra como se distribuyen los puntos de rotura, sin embargo son pocos los registros que se ven representados en este grafico\"\"\""
+    "grafico.set_xticklabels(grafico.get_xticklabels(), rotation=45, ha=\"right\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este grafico muestra como se distribuyen los puntos de rotura, sin embargo son pocos los registros que se ven representados en este grafico"
    ]
   },
   {
@@ -1011,8 +1011,14 @@
    ],
    "source": [
     "# Histogramas de desgaste.\n",
-    "hist= sns.histplot(y=df[\"Tool_wear_[min]\"], x=df[\"Type\"])\n",
-    "\"La produccion de el elemento L es el mas producido y el que mas desgaste de la herramienta produce\""
+    "hist= sns.histplot(y=df[\"Tool_wear_[min]\"], x=df[\"Type\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La produccion de el elemento L es el mas producido y el que mas desgaste de la herramienta produce."
    ]
   },
   {
@@ -1202,22 +1208,28 @@
     "g= sns.FacetGrid(df, col=\"Type\")\n",
     "g.map_dataframe(sns.histplot, x=\"Rotational_speed_[rpm]\")\n",
     "g.set_axis_labels(x_var=\"Velocidad de rotacion\", y_var= \"Conteo\")\n",
-    "g.add_legend()\n",
-    "\"Este grafico muestra que la velocidad de la heramienta para la produccion de los diferentes productos se encuentra en valores similares \""
+    "g.add_legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Este grafico muestra que la velocidad de la heramienta para la produccion de los diferentes productos se encuentra en valores similares."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Se puede notar algunos picos en '"
+       "<seaborn.axisgrid.FacetGrid at 0x1cbc0ef8f70>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1239,8 +1251,7 @@
     "g= sns.FacetGrid(df, col=\"Type\")\n",
     "g.map_dataframe(sns.histplot, x=\"Process_temperature_[K]\")\n",
     "g.set_axis_labels(x_var=\"Temperatura del proceso de producción\", y_var= \"Conteo\")\n",
-    "g.add_legend()\n",
-    "\"Se puede notar algunos picos en \""
+    "g.add_legend()\n"
    ]
   },
   {
@@ -1332,6 +1343,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Antes de analizar los graficos es importante tener en cuenta algunos puntos:\n",
+    "    - Ver los boxplots para ver las medianas de cada variable.\n",
+    "    - Ver los comportamientos de las variables en los momentos de No Failure.\n",
+    "    - Los problemas de Falla de Energia, impacta sobre la velocidad de rotación y el torque alejandose de la mediana.\n",
+    "    - Las Fallas de sobre-esfuerzo se producen con valores de torque altos y gran cantidad de minutos de uso de la herramienta.\n",
+    "    - La falta de disipacion de temperatura se presenta a bajas velocidades de rotación y altas temperaturas, mostrando el la problematica."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1399,15 +1422,6 @@
    ],
    "source": [
     "# Analisis de variables numericas segmentadas segun tipo de falla \n",
-    "\n",
-    "\"\"\"\n",
-    "Antes de analizar los graficos es importante tener en cuenta algunos puntos:\n",
-    "    - Ver los boxplots para ver las medianas de cada variable.\n",
-    "    - Ver los comportamientos de las variables en los momentos de No Failure.\n",
-    "    - Los problemas de Falla de Energia, impacta sobre la velocidad de rotación y el torque alejandose de la mediana.\n",
-    "    - Las Fallas de sobre-esfuerzo se producen con valores de torque altos y gran cantidad de minutos de uso de la herramienta.\n",
-    "    - La falta de disipacion de temperatura se presenta a bajas velocidades de rotación y altas temperaturas, mostrando el la problematica.\n",
-    "\"\"\"\n",
     "for var_name in variables_numericas:\n",
     "    if var_name == \"Target\":\n",
     "        continue\n",
