--- a/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
+++ b/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
     "import seaborn as sns\n",
     "\n",
     "# check version number\n",
-    "import imblearn"
+    "import imblearn\n",
+    "datos= \"C:\\\\Users\\maxib\\Source\\repos\\proyecto_final_coder\\DATOS\\Base_predictive_maintenance.csv\""
    ]
   },
   {
@@ -166,7 +167,7 @@
    ],
    "source": [
     "# Leer .csv y creo un DF\n",
-    "df = pd.read_csv('Base_predictive_maintenance.csv', delimiter=\",\", index_col= [\"UDI\", \"Product_ID\"])\n",
+    "df = pd.read_csv(datos, delimiter=\",\", index_col= [\"UDI\", \"Product_ID\"])\n",
     "df.head()"
    ]
   },
