--- a/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
+++ b/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,13 @@
     "import seaborn as sns\n",
     "\n",
     "# check version number\n",
-    "import imblearn\n",
-    "datos= \"C:\\\\Users\\maxib\\Source\\repos\\proyecto_final_coder\\DATOS\\Base_predictive_maintenance.csv\""
+    "# import imblearn\n",
+    "datos_url= \"C://Users/maxib/Source/repos/proyecto_final_coder/DATOS/Base_predictive_maintenance.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -160,14 +160,14 @@
        "5   L47184       No Failure  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Leer .csv y creo un DF\n",
-    "df = pd.read_csv(datos, delimiter=\",\", index_col= [\"UDI\", \"Product_ID\"])\n",
+    "df = pd.read_csv(datos_url, delimiter=\",\", index_col= [\"UDI\", \"Product_ID\"])\n",
     "df.head()"
    ]
   },
