--- a/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
+++ b/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
@@ -1433,6 +1433,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insight: Estos graficos "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
