--- a/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
+++ b/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
@@ -1347,7 +1347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Antes de analizar los graficos es importante tener en cuenta algunos puntos:\n",
+    "- Antes de analizar los graficos es importante tener en cuenta algunos puntos:\n",
     "    - Ver los boxplots para ver las medianas de cada variable.\n",
     "    - Ver los comportamientos de las variables en los momentos de No Failure.\n",
     "    - Los problemas de Falla de Energia, impacta sobre la velocidad de rotación y el torque alejandose de la mediana.\n",
@@ -1436,7 +1436,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Insight: Estos graficos "
+    "# Insight: Estos graficos describen el comportamiento de las variables durante los momentos de falla:\n",
+    "- La primera columna de graficos muestra los puntos de Power Failure y como se comportan las diferentes variables, es importante notar como las variables Rotational_speed y Torque varian en comparación de los graficos de los momentos sin fallas, estos se distribuyen lejos de la media correspondiente (Torque = 40Nm, Rotational_speed = 1500 rpm), lo cual es esperable teniendo problemas de potencia. Es importante notar que esta falla se presenta una mayor cantidad de veces en los primeros minutos de uso, siendo esta una razon para creer que puede ser un problema de calibración de la herramienta.\n",
+    "\n",
+    "- La segunda columna representa la fallas por desgaste, por uso de la misma, esta falla es particular ya que solo se puede concluir que esta falla se presenta en momentos donde los valores de Tool_wear(min) son altos, es por eso que esta variable debe ser analizada pensando en cuales son los valores de Tool_wear maximos que se deben llegar antes de realizar el remplazo de piezas para evitar fallas.\n",
+    "\n",
+    "- La columna del medio refiera a los problemas por sobreesfuerzo, esta falla presenta tres caracteristicas marcadas en los datos que explican la falla, lo primero que se observa es bajos valores de rpm que se explica por valores altos de Torque, a esto se le suma la tercer caracteristica, determinante para esta tipo de rotura, altos valores de Tool_wear, la combinacion entre alto Torque y gran cantidad de desgaste resulta en una falla por Overstrain.\n",
+    "\n",
+    "- Las datos de Random failure no muestran ningun comportamiento marcados.\n",
+    "\n",
+    "- Heat Dissipattion failure, esta falla presenta bajas rpm, altos niveles torque y altos niveles de temperatura. Esta falla a diferencia de las anteriores, es independiente de la variable Tool_wear, ya que se produce en cualquier momente según los graficos."
    ]
   },
   {
