--- a/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
+++ b/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
@@ -515,6 +515,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insight: Se observa un gran desbalance en la variable Target"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
