--- a/PREPARACION/BALANCEO/oversampling.ipynb
+++ b/PREPARACION/BALANCEO/oversampling.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,24 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "No Failure                  9652\n",
-       "Random Failures             1000\n",
-       "Heat Dissipation Failure    1000\n",
-       "Tool Wear Failure           1000\n",
-       "Power Failure               1000\n",
-       "Overstrain Failure          1000\n",
-       "Name: Failure_Type, dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14652 entries, 0 to 14651\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Type                     14652 non-null  object \n",
+      " 1   Air_temperature_[K]      14652 non-null  float64\n",
+      " 2   Process_temperature_[K]  14652 non-null  float64\n",
+      " 3   Rotational_speed_[rpm]   14652 non-null  int64  \n",
+      " 4   Torque_[Nm]              14652 non-null  float64\n",
+      " 5   Tool_wear_[min]          14652 non-null  int64  \n",
+      " 6   Target                   14652 non-null  int64  \n",
+      "dtypes: float64(3), int64(3), object(1)\n",
+      "memory usage: 801.4+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -241,7 +245,8 @@
     "ros = RandomOverSampler(sampling_strategy={\"Heat Dissipation Failure\":1000,\"Random Failures\":1000,\"Tool Wear Failure\":1000,\"Overstrain Failure\":1000, \"Power Failure\":1000})\n",
     "# resampling X, y\n",
     "X_ros, y_ros = ros.fit_resample(X, y)\n",
-    "y_ros.value_counts()"
+    "y_ros.value_counts()\n",
+    "X_ros.info()"
    ]
   },
   {
