--- a/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
+++ b/ANALISIS/PRIMERA_ENTREGA/analisis_mono_bi_variado.ipynb
@@ -172,6 +172,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Analisis General"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -199,19 +206,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "###############################################################   #\n",
-    "    ##                                                       ###  ##\n",
-    "  ####                                  ######################### ##\n",
-    "    ##                                  ## Analisis General ##### ###\n",
-    "    ##                                  ######################### ##\n",
-    "    ##                                                       ###  ##\n",
-    "    ##                                                       ##  #\n",
-    "  ######                                                     ## \n",
-    "###############################################################  \n",
     "# Datos del Frame\n",
     "df.info()"
    ]
@@ -495,6 +489,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indicadores de desbalanceo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -546,6 +547,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clasificacion según feature type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -572,6 +580,13 @@
     "  elif df[aux].dtypes== 'float64':\n",
     "    float.append(aux)\n",
     "print(categorical, int, float)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variables Categoricas"
    ]
   },
   {
@@ -605,9 +620,9 @@
    "source": [
     "#####################################################################################################################\n",
     "\n",
-    "                                    #############################\n",
-    "                                    ## Analisis de Categoricas ##\n",
-    "                                    #############################\n",
+    "                                                #############################\n",
+    "                                                ## Analisis de Categoricas ##\n",
+    "                                                #############################\n",
     "\n",
     "#####################################################################################################################\n",
     "#Distr de los datos, V. categoricas\n",
@@ -650,6 +665,13 @@
     "draw = sns.countplot(df[\"Type\"])\n",
     "draw.set_xticklabels(draw.get_xticklabels(), rotation=45, ha=\"right\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analisis de frecuencia."
    ]
   },
   {
@@ -784,6 +806,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creación de DFs segmentando por Falla y No Falla"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -871,7 +900,7 @@
     }
    ],
    "source": [
-    "# Conteo de type segmentado segú\n",
+    "# Conteo de type segmentado según Type\n",
     "draw = sns.countplot(df[\"Type\"], hue= df['Target'])\n",
     "draw.set_xticklabels(draw.get_xticklabels(), rotation=45, ha=\"right\")\n",
     "plt.show()"
@@ -908,6 +937,20 @@
     "draw = sns.countplot(fallas[\"Type\"], hue= fallas['Failure_Type'])\n",
     "draw.set_xticklabels(draw.get_xticklabels(), rotation=45, ha=\"right\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variables Numericas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables INT"
    ]
   },
   {
@@ -1030,6 +1073,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables FLOAT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1102,6 +1152,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analisis Bivariado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correlación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -1143,6 +1207,13 @@
     "_ = sns.heatmap(corr, cmap=\"magma\", square=True, ax=ax, annot=True, linewidth=0.1)\n",
     "\n",
     "plt.title(\"Correlacion de Pearson variables numéricas\", y=1.05, size=15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analisis mixto"
    ]
   },
   {
@@ -1263,6 +1334,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analisis de features numericos sin fallas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1348,6 +1426,13 @@
     "    g.map_dataframe(sns.histplot, x=var_name)\n",
     "    g.set_axis_labels(x_var=var_name, y_var= \"Conteo\")\n",
     "    g.add_legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analisis de features en puntos de falla"
    ]
   },
   {
@@ -1454,193 +1539,6 @@
     "\n",
     "- Heat Dissipattion failure, esta falla presenta bajas rpm, altos niveles torque y altos niveles de temperatura. Esta falla a diferencia de las anteriores, es independiente de la variable Tool_wear, ya que se produce en cualquier momente según los graficos."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "                                        ##################################################\n",
-    "                                        ## Analisis de frecuencias variable categoricas ##\n",
-    "                                        ##################################################\n",
-    "# Frecuencias de Columna TYPE\n",
-    "frec_df= pd.DataFrame(df[\"Type\"].value_counts())\n",
-    "# Renombramos el value_count como frecuencia absoluta\n",
-    "frec_df.rename(columns={\"Type\":\"Frec_abs\"},inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Frec_abs</th>\n",
-       "      <th>Frec_abs_acum</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>L</th>\n",
-       "      <td>6000</td>\n",
-       "      <td>6000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>2997</td>\n",
-       "      <td>8997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>10000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Frec_abs  Frec_abs_acum\n",
-       "L      6000           6000\n",
-       "M      2997           8997\n",
-       "H      1003          10000"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Calculamos la frecuencia absoluta acumulada\n",
-    "frec_acum= []\n",
-    "aux_acum= 0\n",
-    "for i in (frec_df[\"Frec_abs\"].values):\n",
-    "    aux_acum= aux_acum + i\n",
-    "    frec_acum.append(aux_acum)\n",
-    "frec_df[\"Frec_abs_acum\"]= frec_acum\n",
-    "frec_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Frecuencia Relativa en % \n",
-    "frec_df[\"Frec_rel_%\"]= 100 * frec_df[\"Frec_abs\"]/len(df.Type)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Frec_abs</th>\n",
-       "      <th>Frec_abs_acum</th>\n",
-       "      <th>Frec_rel_%</th>\n",
-       "      <th>Frec_rel_%_acum</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>L</th>\n",
-       "      <td>6000</td>\n",
-       "      <td>6000</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>60.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>M</th>\n",
-       "      <td>2997</td>\n",
-       "      <td>8997</td>\n",
-       "      <td>29.97</td>\n",
-       "      <td>89.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>H</th>\n",
-       "      <td>1003</td>\n",
-       "      <td>10000</td>\n",
-       "      <td>10.03</td>\n",
-       "      <td>100.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Frec_abs  Frec_abs_acum  Frec_rel_%  Frec_rel_%_acum\n",
-       "L      6000           6000       60.00            60.00\n",
-       "M      2997           8997       29.97            89.97\n",
-       "H      1003          10000       10.03           100.00"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Valores de las Frecuencias relativas\n",
-    "frec_rel_val= frec_df[\"Frec_rel_%\"].values\n",
-    "frec_rel_acum= []\n",
-    "aux_acum= 0\n",
-    "for i in frec_rel_val:\n",
-    "    aux_acum= aux_acum + i\n",
-    "    frec_rel_acum.append(aux_acum)\n",
-    "frec_df[\"Frec_rel_%_acum\"]= frec_rel_acum\n",
-    "frec_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
