--- a/ANALISIS/CLASIFICACION/TREE_IMPLEMENTACION.ipynb
+++ b/ANALISIS/CLASIFICACION/TREE_IMPLEMENTACION.ipynb
@@ -414,7 +414,7 @@
     }
    ],
    "source": [
-    "                        \n",
+    "# Variables objetivo y matriz                        \n",
     "X_target_test= df.drop([\"Target\",\"Type\",\"Failure_Type\"], axis=1) \n",
     "y_target_test= df[\"Target\"]\n",
     "# Creamos el modelo\n",
