--- a/ANALISIS/CLASIFICACION/knn_clasi.ipynb
+++ b/ANALISIS/CLASIFICACION/knn_clasi.ipynb
@@ -403,6 +403,20 @@
     "print(f\"F1 Score del classificador Train: {metrics.f1_score(y, y_test_pred)}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vairable Failure Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
