--- a/ANALISIS/hypertuninga/hyper_implementacion.ipynb
+++ b/ANALISIS/hypertuninga/hyper_implementacion.ipynb
@@ -945,7 +945,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "y_score"
+   ]
   }
  ],
  "metadata": {
