--- a/ANALISIS/hypertuninga/hyper_implementacion.ipynb
+++ b/ANALISIS/hypertuninga/hyper_implementacion.ipynb
@@ -1998,12 +1998,40 @@
     "print(f\"F1 Score TEST del classificador weighted: {f1_score(data_test_y_ft_dum, y_test_pred, average='weighted')}\")\n",
     "\n",
     "print(f\"F1 Score TEST del classificador: {f1_score(data_test_y_ft_dum, y_test_pred, average=None)}\")\n",
-    "\n",
+    "# Analisis jaccard\n",
     "print(f\"Jaccard Score TEST del classificador macro: {metrics.jaccard_score(data_test_y_ft_dum, y_test_pred, average='macro')}\")\n",
     "\n",
     "print(f\"Jaccard Score TEST del classificador micro: {metrics.jaccard_score(data_test_y_ft_dum, y_test_pred, average='micro')}\")\n",
     "\n",
     "print(f\"Jaccard Score TEST del classificador weighted: {metrics.jaccard_score(data_test_y_ft_dum, y_test_pred, average='weighted')}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\maxib\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n           0       0.55      1.00      0.71       112\\n           1       1.00      0.97      0.99      9652\\n           2       0.93      1.00      0.96        78\\n           3       1.00      1.00      1.00        95\\n           4       1.00      0.33      0.50        18\\n           5       0.28      1.00      0.43        45\\n\\n   micro avg       0.98      0.97      0.97     10000\\n   macro avg       0.79      0.88      0.77     10000\\nweighted avg       0.99      0.97      0.98     10000\\n samples avg       0.97      0.97      0.97     10000\\n'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.classification_report(data_test_y_ft_dum, y_test_pred)"
    ]
   },
   {
